# e

./: .gitignore  README.md  a.py  action_node.py  aflow.py  aflow_prompt.py  analyze_dataset.py  anode.py  counts.py  create_grouped_dataset.py  data.py  db.py  debug_g_dino.py  deux.sqlite  final_test.py  florence.py  gd.py  lmm.py  loss.md  od.py  one.parquet  op.py  pyproject.toml  run_aflow.py  schema.py  seed.py  seed1.py  test_api.py  test_g_dino.py  test_graph_run.py  test_image_only.py  test_pipeline.py  test_real_images.py  test_task_data.py  test_task_od.py  ts.py  util.py  visualize_bbox.py  viswiz.py  wand.py  (+2 more)
convince_self/: a.py  analyze_dataset.py  b.py
data/: counts.py  seed1.py  seed_modified.py  seed_od.py  zero.py
task_main/: data.py  how_to_parse_response.py  prompts.py  seed.py  ts.py
task_od/: counts_od.py  data.py  gd.py  prompts.py  seed.py  seed_od.py  seed_test.py
viswiz/: viswiz.py
